--- a/Unit1/1-03/index2.html
+++ b/Unit1/1-03/index2.html
@@ -6,6 +6,6 @@
   <body>
     <h1> hello world but big</h1>
     <p>Hello world but small</p>
-    <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1&ab_channel=RickAstley>Link</a>
+    <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1&ab_channel=RickAstley>awesome cool stuff</a>
   </body>
 </html>
