--- a/Unit1/1-03/index2.html
+++ b/Unit1/1-03/index2.html
@@ -7,5 +7,6 @@
     <h1> hello world but big</h1>
     <p>Hello world but small</p>
     <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1&ab_channel=RickAstley>awesome cool stuff</a>
+    <img src=" https://www.nvidia.com/content/dam/en-zz/Solutions/geforce/ada/rtx-4060-4060ti/geforce-rtx-4060-ti-og-1200x630.jpg" alt="4060" width="50" lenght="50">
   </body>
 </html>
