--- a/Unit1/1-05/index.html
+++ b/Unit1/1-05/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <!-- ICS2O Unit 1-05 HTML Style Guide-->
-<html lang="en-ca"
+<html lang="en-ca"></html>
   <head>
-
-
+    <meta charset="utf:8">
+    <meta name="description" content="My firdy webpage, with proper style">
+    <meta name="author" content="Leo">
+    <meta name="viewport" content="width=device.width, initial-scale=1">
+<title>My first webpage with style</title>
   </head>
