finished tjhe style section

--- a/Unit1/1-05/index.html
+++ b/Unit1/1-05/index.html
@@ -2,9 +2,17 @@
 <!-- ICS2O Unit 1-05 HTML Style Guide-->
 <html lang="en-ca"></html>
   <head>
-    <meta charset="utf:8">
+    <meta charset="utf-8">
     <meta name="description" content="My firdy webpage, with proper style">
     <meta name="author" content="Leo">
     <meta name="viewport" content="width=device.width, initial-scale=1">
-<title>My first webpage with style</title>
+    <title>My first webpage with style</title>
   </head>
+  <style>
+    #my-header {
+      background-color:rgb(255, 165, 0);
+      color: hsl(147, 50%, 47%);
+      padding: 40px;
+      text-align: center;
+    }
+  </style>
