finished the last part of 1-05

--- a/Unit1/1-05/index.html
+++ b/Unit1/1-05/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- ICS2O Unit 1-05 HTML Style Guide-->
-<html lang="en-ca"></html>
+<html lang="en-ca">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="My firdy webpage, with proper style">
@@ -16,3 +16,12 @@
       text-align: center;
     }
   </style>
+  <body style="background-color: powderblue">
+    <h1 id="my-header">style is impoetant</h1>
+    <p style="background-color:#ff00ff">Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alr="style">
+    <p> 
+      <a href="./cities.html">my cities page</a>
+    </p>
+  </body>
+  </html>
