added a lot of css changes is 1-06 edits

--- a/Unit1/1-05/index.html
+++ b/Unit1/1-05/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="My first webpage, with proper style">
     <meta name="author" content="Leo">
     <meta name="viewport" content="width=device.width, initial-scale=1">
-    <title>My first webpage with style</title>
+    <title>My first webpage with Style</title>
   </head>
   <body>
     <h1 id="my-header">style is important</h1>
