added bonus for 1-06

--- a/Unit1/1-06/index2.html
+++ b/Unit1/1-06/index2.html
@@ -2,10 +2,39 @@
 
 <html lang="en-ca">
 <head>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style2.css">
   <meta charset="utf-8">
   <meta name="description" content="my showcase on how pc is better than console">
   <meta name="author" content="Leo">
   <meta name="viewport" content="width=device.width, initial-scale=1">
   <title>My table on how pc is better the console</title>
 </head>
+<body>
+<h1 id="myheader">3 reasons why pc is better</h1>
+<ol>
+<li>price</li>
+<li>diffuclty fixing</li>
+<li>performence</li>
+</ol>
+<h7 id="cool"> i will be comparing a pc with a 5070 to ps5</h7>
+</body>
+<table>
+  <tr>
+    <th>hardware</th>
+    <th>Price</th>
+    <th>diffuclty fixing</th>
+    <th>performence</th>
+  </tr>
+  <tr>
+    <th>pc</th>
+    <th>1100</th>
+    <th>easy</th>
+    <th>inasane</th>
+  </tr>
+    <tr>
+      <th>PS5 pro</th>
+      <th>959</th>
+      <th>very hard</th>
+      <th>really good</th>
+    </tr>
+</table>
