added the photos

--- a/Unit1/1-05/cities.html
+++ b/Unit1/1-05/cities.html
@@ -11,18 +11,19 @@
 
 <body>
   <h1 id="myheader"> Capital cities</h1>
-  <h2 class="city">ottowa</h2>
-  <p> ottowa is the capitol of CAnada</p>
-  <img rsc="" alt="Canada">
+  <h2 class="city">ottawa</h2>
+  <p> ottawa is the capitol of Canada</p>
+  <img src="./images/flag-of-Canada.png" alt="Canada">
 
-  <h2 class="city">London</h2>
+  <h2 class="city">Buenos Aires</h2>
   <p>London is the capitol of England</p>
-  <img src="" alt="UK">
+  <img src="./images/flag-of-Argentina.png" alt="agentina">
+
   <h2 class="city">Paris</h2>
   <p>Paris is the capitol of France</p>
-  <img src="" alt="France">
+  <img src="./images/flag-of-France.png" alt="France">
 
-  <h2 class="city">Vatican city</h2>
-  <p>Vatican city is the capitol of Vatican</p>
-  <img src="" alt="Vaticans">
+  <h2 class="city">brasilia</h2>
+  <p>brasilia is the capitol of Brasil</p>
+  <img src="./images/flag-of-Brazil.png" alt="BRasil">
 </body>
