--- a/Unit1/1-06/index2.html
+++ b/Unit1/1-06/index2.html
@@ -21,19 +21,19 @@
 <table>
   <tr>
     <th>hardware</th>
-    <th>Price</th>
+    <th>Price($)</th>
     <th>diffuclty fixing</th>
     <th>performence</th>
   </tr>
   <tr>
     <th>pc</th>
-    <th>1100</th>
+    <th>1100$</th>
     <th>easy</th>
-    <th>inasane</th>
+    <th>insane</th>
   </tr>
     <tr>
       <th>PS5 pro</th>
-      <th>959</th>
+      <th>959$</th>
       <th>very hard</th>
       <th>really good</th>
     </tr>
