i aded html to end

--- a/Unit1/1-06/index2.html
+++ b/Unit1/1-06/index2.html
@@ -18,23 +18,24 @@
 </ol>
 <h7 id="cool"> i will be comparing a pc with a 5070 to ps5</h7>
 </body>
-<table>
-  <tr>
-    <th>hardware</th>
-    <th>Price($)</th>
-    <th>diffuclty fixing</th>
-    <th>performence</th>
-  </tr>
-  <tr>
-    <th>pc</th>
-    <th>1100$</th>
-    <th>easy</th>
-    <th>insane</th>
-  </tr>
+  <table>
+    <tr>
+      <th>hardware</th>
+      <th>Price($)</th>
+      <th>diffuclty fixing</th>
+      <th>performence</th>
+    </tr>
+    <tr>
+      <th>pc</th>
+      <th>1100$</th>
+      <th>easy</th>
+      <th>insane</th>
+    </tr>
     <tr>
       <th>PS5 pro</th>
       <th>959$</th>
       <th>very hard</th>
       <th>really good</th>
     </tr>
-    </table>
+  </table>
+</html>
