worked on a bunch of stuff

--- a/Unit1/1-05/index.html
+++ b/Unit1/1-05/index.html
@@ -4,6 +4,7 @@
   <head>
    <link rel="stylesheet" href="./css/style.css">
     <meta charset="utf-8">
+    <meta keywords=" ICD2O Trh">
     <meta name="description" content="My first webpage, with proper style">
     <meta name="author" content="Leo">
     <meta name="viewport" content="width=device.width, initial-scale=1">
