--- a/Unit1/1-06/index2.html
+++ b/Unit1/1-06/index2.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="stylesheet" href="./css/style2.css">
   <meta charset="utf-8">
+  <meta keywords="table, pc">
   <meta name="description" content="my showcase on how pc is better than console">
   <meta name="author" content="Leo">
   <meta name="viewport" content="width=device.width, initial-scale=1">
