--- a/Unit1/1-07/index.html
+++ b/Unit1/1-07/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 
 <html lang="en-ca">
-<head>
- 
-    <!-- Textfield with Floating Label -->
-    
-    <form action="#">
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input class="mdl-textfield__input" type="text" id="sample3">
-        <label class="mdl-textfield__label" for="sample3">What is your type of brainrot</label>
-      </div>
-    </form>
 
-  <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="demo-menu-lower-left">
-    <li class="mdl-menu__item">Some Action</li>
-    <li class="mdl-menu__item mdl-menu__item--full-bleed-divider">Another Action</li>
-    <li disabled class="mdl-menu__item">Disabled Action</li>
-    <li class="mdl-menu__item">Yet Another Action</li>
-  </ul>
+<head>
+  <link rel="stylesheet" href="./style.css">
+  <meta charset="utf-8">
+  <meta keywords="table, pc">
+  <meta name="description" content="my showcase on how pc is better than console">
+  <meta name="author" content="Leo">
+  <meta name="viewport" content="width=device.width, initial-scale=1">
+  <title>My table on how pc is better the console</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+
+</head>
+<body>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+
+
+<!-- Simple Textfield -->
+ <form action="#">
+  <div class="mdl-textfield mdl-js-textfield">
+    <input class="mdl-textfield__input" type="text" id="sample1">
+    <label class="mdl-textfield__label" for="sample1">how cool are you</label>
+  </div>
+</form>
+
 
 <!-- Default Slider -->
-  <p>Brainroot meter</p>
+  <p>Brainrot meter</p>
   <input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="0" tabindex="0">
 
 
@@ -28,13 +37,16 @@
   <input type="checkbox" id="switch-1" class="mdl-switch__input" checked>
   <span class="mdl-switch__label"></span>
 </label>
-  <p>switch on Brainrot</p>
+<p>switch on coolness</p>
 
 <!-- FAB button with ripple -->
+<div style="text-align: center;">
 <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
   <i class="material-icons">add</i>
 </button>
-<p>press to gain brainrot</p>
+<p>press to gain coolness</p>
+</div>
+
 </body>
 
 </html>
