--- a/Unit1/1-08/index.html
+++ b/Unit1/1-08/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="./style.css">
   <meta charset="utf-8">
   <meta keywords="table, pc">
-  <meta name="description" content="my showcase on how pc is better than console">
+  <meta name="description" content="coolness test">
   <meta name="author" content="Leo">
   <meta name="viewport" content="width=device.width, initial-scale=1">
-  <title>My table on how pc is better the console2</title>
+  <title>how cool are you</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-orange.min.css">
 
@@ -18,41 +18,6 @@
 <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
 <link rel="manifest" href="./favicon/site.webmanifest">
 </head>
-
-
-<style>
-  div.kk {
-    position: relative;
-    left: 0px;
-    bottom: 60px;
-
-  }
-
-
-  div.lk {
-    position: relative;
-    left: 330px;
-    bottom: 98px;
-
-  }
-
-  div.ak {
-    position: relative;
-    left: 290px;
-    bottom: 95px;
-
-  }
-
-
-  div.ck {
-
-    position: relative;
-    left: 700px;
-    bottom: 200px;
-
-
-  }
-</style>
 
 
 <body>
