work in progress

--- a/Unit1/1-08/test.html
+++ b/Unit1/1-08/test.html
@@ -17,22 +17,15 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
   <link rel="manifest" href="./favicon/site.webmanifest">
+
+    <meta http-equiv="refresh" content="5; url='https://www.google.com/'">
+
 </head>
 
-<Body>
-<h1 id="supacoolbig">So you think you're cool</h1>
-<div>
-<h6>Press this button to go see if its true</h6>
-</div>
-<div class="arrow">
-<img src="./images/arrow.png">
-</div>
-<!-- Colored FAB button with ripple -->
-  <div class="move">
-    <a href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/1-08/index.html?serverWindowId=3ee48ae3-3b3a-4f10-9baa-db3a491b173f">
-      <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-        <i class="material-icons">add</i>
-       </button>
-    </a>
-  </div>
-</Body>
+
+
+<body>
+<!-- MDL Progress Bar with Indeterminate Progress -->
+ 
+<div id="p2" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
+</body>
