added teh auto website switch again

--- a/Unit1/1-08/test.html
+++ b/Unit1/1-08/test.html
@@ -18,7 +18,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
   <link rel="manifest" href="./favicon/site.webmanifest">
 
-
+    <meta http-equiv="refresh" content="5; url='https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/1-08/index.html?serverWindowId=aa327665-bc49-44ec-b6f5-34f652bed9d8'">
 </head>
 
 
