--- a/Unit1/1-09/index.html
+++ b/Unit1/1-09/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
+<div class="all">
 
   <!-- Simple Textfield -->
   <form action="#">
@@ -31,19 +31,6 @@
       <label class="mdl-textfield__label" for="sample1">enter your coolness type</label>
     </div>
   </form>
-
-
-
-
-  <!-- Default Slider -->
-
-  <input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="0" tabindex="0">
-  <p>coolness meter</p>
-
-
-
-
-
 
 
 
@@ -75,23 +62,6 @@
     }
   </style>
 
-
-  <div class="ck">
-    <ul class="demo-list-item mdl-list">
-      <li class="mdl-list__item">
-        <span class="mdl-list__item-primary-content">
-          Leo
-        </span>
-      </li>
-      <li class="mdl-list__item">
-        <span class="mdl-list__item-primary-content">
-          Leo
-        </span>
-    </ul>
-  </div>
-
-
-
   <script>
     const button = document.getElementById('searchButton');
     const input = document.getElementById('userInput');
@@ -110,14 +80,14 @@
 
 
 
-
-<h5>rou coolness type</h5>
+<div class="coll">
+<h5>your coolness type</h5>
 <p id="generatedName"></p>
 <button onclick="generateRandomName()">click here</button>
 <script>function generateRandomName() {
     const names = [
       "tiger", "lion", "owl", "squirrel", "dog", "wolf",
-      "japaness spider crab", "dragon", "worm", "Whale Shark", "white shark", "your neigbhour"
+      "japaness spider crab", "dragon", "worm", "Whale Shark", "white shark", "sandworm"
     ];
 
     const randomIndex = Math.floor(Math.random() * names.length);
@@ -125,6 +95,7 @@
 
     document.getElementById("generatedName").innerText = randomName;
   }</script>
-
+</div>
+</div>
 </body>
 </html>
