--- a/Unit1/1-09/index.html
+++ b/Unit1/1-09/index.html
@@ -37,7 +37,7 @@
   <div class="lk">
     <!--checkbox-->
     <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
-      <input type="checkbox" id="switch-1" class="mdl-switch__input" checked>
+      <input type="checkbox" id="switch-1" class="mdl-switch__input" notchecked>
       <span class="mdl-switch__label"></span>
     </label>
 
