added platypus to list of animals

--- a/Unit1/1-09/index.html
+++ b/Unit1/1-09/index.html
@@ -87,7 +87,7 @@
 <script>function generateRandomName() {
     const names = [
       "tiger", "lion", "owl", "squirrel", "dog", "wolf",
-      "japaness spider crab", "dragon", "worm", "Whale Shark", "white shark", "sandworm"
+      "japaness spider crab", "dragon", "worm", "Whale Shark", "white shark", "sandworm", "Platypus"
     ];
 
     const randomIndex = Math.floor(Math.random() * names.length);
