added try again and moved the loading bar to teh left a litle bit

--- a/Unit1/1-09/index.html
+++ b/Unit1/1-09/index.html
@@ -88,6 +88,8 @@
     const names = [
       "tiger", "lion", "owl", "squirrel", "dog", "wolf",
       "japaness spider crab", "dragon", "worm", "Whale Shark", "white shark", "sandworm", "Platypus"
+      , "try again"
+
     ];
 
     const randomIndex = Math.floor(Math.random() * names.length);
