--- a/Unit1/1-09/index.html
+++ b/Unit1/1-09/index.html
@@ -75,6 +75,22 @@
   </script>
 
 
+  <script>
+    input.addEventListener('keydown', function (event){
+        if (event.key === 'Enter') {
+           event.preventDefault();
+          const q = (input.value || '').trim();
+          const url = 'https://www.google.com/search?q=' + encodeURIComponent(q);
+          window.open(url, '_blank');
+        }
+
+    });
+
+
+  </script>
+
+
+
 
 
 
