--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -6,14 +6,15 @@
   <link rel="stylesheet" href="./css/style.css">
   <meta charset="utf-8">
   <meta keywords="books, story, nice">
-  <meta name="description" content="fun books">
+  <meta name="description" content="why books rock">
   <meta name="author" content="Leo">
   <meta name="viewport" content="width=device.width, initial-scale=1">
-  <title>the greatest media</title>
+  <title> why books are great</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
 
 </head>
+
 
 <body>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -35,32 +36,23 @@
           <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index4.html?serverWindowId=5d303e58-208c-4695-a24d-b8502532d143">The best of books</a>
         </nav>
       </div>
-      </header>
-      <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">list of books</span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="">Way of Kings</a>
-          <a class="mdl-navigation__link" href="">The will of the many</a>
-          <a class="mdl-navigation__link" href="">Mistborn</a>
-          <a class="mdl-navigation__link" href="">3 body problems</a>
-          <a class="mdl-navigation__link" href="">tress if the emerald sea</a>
-        </nav>
-      </div>
-      <main class="mdl-layout__content">
-        <div class="page-content"><!-- Your content goes here --></div>
-      </main>
-      </div>
+    </header>
+    <div class="mdl-layout__drawer">
+      <span class="mdl-layout-title">list of books</span>
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="">Way of Kings</a>
+        <a class="mdl-navigation__link" href="">The will of the many</a>
+        <a class="mdl-navigation__link" href="">Mistborn</a>
+        <a class="mdl-navigation__link" href="">3 body problems</a>
+        <a class="mdl-navigation__link" href="">tress if the emerald sea</a>
+      </nav>
+    </div>
+    <main class="mdl-layout__content">
+      <div class="page-content"><!-- Your content goes here --></div>
+    </main>
+  </div>
 
-  <br>
-  <br>
-<!--word section-->
-  <h1 class="mainheaders">The best books you never read</h1>
 
-  <p id="hooker">books are a media that is shunned due to it not having flahy scenes or acting but books are as famous as they are for a reason, its time for you to learn that reason</p>
-
-  <h4 id="subheader">its time to give books a try</h4>
-
-  <img src="images/guy reading book for project.jpg" id="photo1">
 
 </body>
 
