added the base for some photos

--- a/Unit1/Final/index2.html
+++ b/Unit1/Final/index2.html
@@ -59,14 +59,19 @@
 
 <ol class="list">
 <li>leooooo</li>
+<img src="">
 <br>
 <li>leooooo</li>
+<img src="">
 <br>
 <li>leooooo</li>
+<img src="">
 <br>
 <li>leooooo</li>
+<img src="">
 <br>
 <li>leooooo</li>
+<img src="">
 </ol>
 
 
