--- a/Unit1/Final/index.html
+++ b/Unit1/Final/index.html
@@ -56,7 +56,7 @@
 <!--word section-->
   <h1 class="mainheaders">The best books you never read</h1>
 
-  <p id="hooker">books are a media that is shunned due to it not having flahy scenes or acting but books are as famous as they are for a reason, its time for you to learn that reason</p>
+  <p id="hooker">books are a media that ias shunned due to it not having flahy scenes or acting but books are as famous as they are for a reason, its time for you to learn that reason</p>
 
   <h4 id="subheader">its time to give books a try</h4>
 
