--- a/Unit1/Final/index2.html
+++ b/Unit1/Final/index2.html
@@ -17,64 +17,73 @@
 
 
 <body>
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<script src="./js/script.js"></script>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="./js/script.js"></script>
 
-<!-- Always shows a header, even in smaller screens. -->
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <header class="mdl-layout__header">
-    <div class="mdl-layout__header-row">
-      <!-- Title -->
-      <span class="mdl-layout-title">Books are for you</span>
-      <!-- Add spacer, to align navigation to the right -->
-      <div class="mdl-layout-spacer"></div>
-      <!-- Navigation. We hide it in small screens. -->
-      <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index.html?serverWindowId=fc8590d6-4210-4a1f-a1c6-9519a4d71ae8">1</a>
-        <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index2.html?serverWindowId=3ae1c341-350a-485a-9d69-d13896f6a191">2</a>
-        <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index3.html?serverWindowId=8f1073f5-0a62-4e15-ae4b-d833e4610d6b">3</a>
-        <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index4.html?serverWindowId=5d303e58-208c-4695-a24d-b8502532d143">4</a>
+  <!-- Always shows a header, even in smaller screens. -->
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <!-- Title -->
+        <span class="mdl-layout-title">Books are for you</span>
+        <!-- Add spacer, to align navigation to the right -->
+        <div class="mdl-layout-spacer"></div>
+        <!-- Navigation. We hide it in small screens. -->
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index.html?serverWindowId=fc8590d6-4210-4a1f-a1c6-9519a4d71ae8">1</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index2.html?serverWindowId=3ae1c341-350a-485a-9d69-d13896f6a191">2</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index3.html?serverWindowId=8f1073f5-0a62-4e15-ae4b-d833e4610d6b">3</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index4.html?serverWindowId=5d303e58-208c-4695-a24d-b8502532d143">4</a>
+        </nav>
+      </div>
+    </header>
+    <div class="mdl-layout__drawer">
+      <span class="mdl-layout-title">list of books</span>
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="">Way of Kings</a>
+        <a class="mdl-navigation__link" href="">The will of the many</a>
+        <a class="mdl-navigation__link" href="">Mistborn</a>
+        <a class="mdl-navigation__link" href="">3 body problems</a>
+        <a class="mdl-navigation__link" href="">tress if the emerald sea</a>
       </nav>
     </div>
-  </header>
-  <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">list of books</span>
-    <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Way of Kings</a>
-      <a class="mdl-navigation__link" href="">The will of the many</a>
-      <a class="mdl-navigation__link" href="">Mistborn</a>
-      <a class="mdl-navigation__link" href="">3 body problems</a>
-      <a class="mdl-navigation__link" href="">tress if the emerald sea</a>
-    </nav>
+    <main class="mdl-layout__content">
+      <div class="page-content"><!-- Your content goes here --></div>
+    </main>
   </div>
-  <main class="mdl-layout__content">
-    <div class="page-content"><!-- Your content goes here --></div>
-  </main>
-</div>
-<br>
-<br>
-<br>
-
- <h3 class="mainheaders"> Five reasson why you should give books a try</h3>
-
-<ol class="list">
-<li>leooooo</li>
-<img src="">
-<br>
-<li>leooooo</li>
-<img src="">
-<br>
-<li>leooooo</li>
-<img src="">
-<br>
-<li>leooooo</li>
-<img src="">
-<br>
-<li>leooooo</li>
-<img src="">
-</ol>
+  <br>
+  <br>
+  <br>
 
 
+  <h3 class="mainheaders"> Five reasson why you should give books a try</h3>
+  <p>These reasons are made to show you a whole new world</p>
+
+
+  <div class="move">
+  <div class="box">
+    <ol class="list">
+    <li>Books have some of the best stories</li>
+    <img src="">
+    <br>
+    <br>
+    <li>Books are the oen of the best wasy to improve your grammar</li>
+    <img src="">
+    <br>
+    <br>
+    <li>You can laern more about some of your favorite wordl like harry potter, percy jackon and lord of the rings.</li>
+    <img src="">
+    <br>
+    <br>
+    <li>You can join some of the most fun and creatice communites and meet great new people that have the same intrests.</li>
+    <img src="">
+    <br>
+    <br>
+    <li>The momments</li>
+    <img src="">
+    </ol>
+  </div>
+  </div>
 </body>
 
 </html>
