--- a/Unit1/Final/index.html
+++ b/Unit1/Final/index.html
@@ -47,7 +47,7 @@
         </nav>
       </div>
       <main class="mdl-layout__content">
-        <div class="page-content"><!-- Your content goes here --></div>
+        <div class="page-content"><!-- books --></div>
       </main>
       </div>
 
@@ -56,11 +56,13 @@
 <!--word section-->
   <h1 class="mainheaders">The best books you never read</h1>
 
-  <p id="hooker">books are a media that ias shunned due to it not having flahy scenes or acting but books are as famous as they are for a reason, its time for you to learn that reason</p>
+  <p id="hooker">books are a media that is shunned due to it not having flahy scenes or acting but books are as famous as they are for a reason, its time for you to learn that reason</p>
 
   <h4 id="subheader">its time to give books a try</h4>
 
   <img src="images/guy reading book for project.jpg" id="photo1">
+
+
 
 </body>
 
