--- a/Unit1/Final/index3.html
+++ b/Unit1/Final/index3.html
@@ -58,7 +58,7 @@
 
 
 <h3 class="mainheaders"> Five begginer books that you should read.</h3>
-<p>These reasons are made to show you a whole new world</p>
+<p>These books were chos by me for you</p>
 
 
 </body>
