added some more words and a search bar bu thte search bar wont work gonna have to work on that later

--- a/Unit1/Final/index3.html
+++ b/Unit1/Final/index3.html
@@ -60,6 +60,30 @@
 <h3 class="mainheaders"> Five begginer books that you should read.</h3>
 <p>These books were chos by me for you</p>
 
+  <div class="move">
+    <div class="box">
+      <ol class="list">
+        <li>the way of kings</li>
+        <img src="">
+        <br>
+        <br>
+        <li>The will of the many</li>
+        <img src="">
+        <br>
+        <br>
+        <li> Mistborn</li>
+        <img src="">
+        <br>
+        <br>
+        <li>3 body problems</li>
+        <img src="">
+        <br>
+        <br>
+        <li>Tress of the emerald sea</li>
+        <img src="">
+      </ol>
+    </div>
+  </div>
 
 </body>
 
