--- a/Unit1/Final/index3.html
+++ b/Unit1/Final/index3.html
@@ -30,10 +30,10 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index.html?serverWindowId=fc8590d6-4210-4a1f-a1c6-9519a4d71ae8">1</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index2.html?serverWindowId=3ae1c341-350a-485a-9d69-d13896f6a191">2</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index3.html?serverWindowId=8f1073f5-0a62-4e15-ae4b-d833e4610d6b">3</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index4.html?serverWindowId=5d303e58-208c-4695-a24d-b8502532d143">4</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html">1</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index2.html">2</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index3.html">3</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index4.html">4</a>
          </nav>
          </div>
     </header>
@@ -60,30 +60,30 @@
 <h3 class="mainheaders"> Five begginer books that you should read.</h3>
 <p>These books were chos by me for you</p>
 
-  <div class="move">
-    <div class="box">
-      <ol class="list">
-        <li>the way of kings</li>
-        <img src="">
-        <br>
-        <br>
-        <li>The will of the many</li>
-        <img src="">
-        <br>
-        <br>
-        <li> Mistborn</li>
-        <img src="">
-        <br>
-        <br>
-        <li>3 body problems</li>
-        <img src="">
-        <br>
-        <br>
-        <li>Tress of the emerald sea</li>
-        <img src="">
-      </ol>
-    </div>
+<div class="move">
+  <div class="box">
+    <ol class="list">
+      <li>the way of kings</li>
+      <img src="">
+      <br>
+      <br>
+      <li>The will of the many</li>
+      <img src="">
+      <br>
+      <br>
+      <li> Mistborn</li>
+      <img src="">
+      <br>
+      <br>
+      <li>3 body problems</li>
+      <img src="">
+      <br>
+      <br>
+      <li>Tress of the emerald sea</li>
+      <img src="">
+    </ol>
   </div>
+</div>
 
 </body>
 
