--- a/Unit1/Final/index2.html
+++ b/Unit1/Final/index2.html
@@ -30,10 +30,10 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index.html?serverWindowId=fc8590d6-4210-4a1f-a1c6-9519a4d71ae8">1</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index2.html?serverWindowId=3ae1c341-350a-485a-9d69-d13896f6a191">2</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index3.html?serverWindowId=8f1073f5-0a62-4e15-ae4b-d833e4610d6b">3</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index4.html?serverWindowId=5d303e58-208c-4695-a24d-b8502532d143">4</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html">1</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index2.html">2</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index3.html">3</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index4.html">4</a>
         </nav>
       </div>
     </header>
