--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -30,10 +30,10 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index.html?serverWindowId=fc8590d6-4210-4a1f-a1c6-9519a4d71ae8">1</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index2.html?serverWindowId=3ae1c341-350a-485a-9d69-d13896f6a191">2</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index3.html?serverWindowId=8f1073f5-0a62-4e15-ae4b-d833e4610d6b">3</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index4.html?serverWindowId=5d303e58-208c-4695-a24d-b8502532d143">4</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html">1</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index2.html">2</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index3.html">3</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index4.html">4</a>
         </nav>
       </div>
     </header>
@@ -51,6 +51,40 @@
       <div class="page-content"><!-- Your content goes here --></div>
     </main>
   </div>
+
+<br>
+<br>
+<br>
+
+
+<h3 class="mainheaders"> now it time for you to go check some of these books out.</h3>
+
+<p>now use the search bar below to enter the book you wanna know about and it will taek you to the indigo website with the book loaded up.</p>
+
+<!-- Textfield with Floating Label -->
+
+<div class="text">
+<form action="#">
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    <input id="userInput" class="mdl-textfield__input" type="text" id="sample3">
+    <label class="mdl-textfield__label" for="sample3">indigo.</label>
+  </div>
+</form>
+</div>
+
+
+
+
+
+
+
+  <div class="button">
+    <!-- Colored FAB button with ripple -->
+    <button id="searchButton" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+      <i class="material-icons">search</i>
+    </button>
+  </div>
+
 
 
 
