--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -8,7 +8,7 @@
   <meta keywords="books, story, nice">
   <meta name="description" content="why books rock">
   <meta name="author" content="Leo">
-  <meta name="viewport" content="width=device.width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> 4</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
@@ -20,6 +20,11 @@
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="./js/script.js"></script>
 
+
+
+
+
+  <div>
   <!-- Always shows a header, even in smaller screens. -->
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
@@ -30,10 +35,14 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index.html?serverWindowId=6da56954-b23b-4cab-abc2-8242f9838021">1</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index2.html?serverWindowId=9dfe60db-183b-4a1d-ab49-7f3f4b1add8b">2</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index.html?serverWindowId=6da56954-b23b-4cab-abc2-8242f9838021">3</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3002.app.github.dev/Unit1/Final/index4.html?serverWindowId=11c3d725-bc56-4724-abe8-85a3a5908698">4</a>
+          <a class="mdl-navigation__link"
+            href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html?serverWindowId=6da56954-b23b-4cab-abc2-8242f9838021">1</a>
+          <a class="mdl-navigation__link"
+            href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index2.html?serverWindowId=9dfe60db-183b-4a1d-ab49-7f3f4b1add8b">2</a>
+          <a class="mdl-navigation__link"
+            href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html?serverWindowId=6da56954-b23b-4cab-abc2-8242f9838021">3</a>
+          <a class="mdl-navigation__link"
+            href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index4.html?serverWindowId=11c3d725-bc56-4724-abe8-85a3a5908698">4</a>
         </nav>
       </div>
     </header>
@@ -52,6 +61,9 @@
     </main>
   </div>
 
+  </div>
+
+
 <br>
 <br>
 <br>
@@ -62,14 +74,16 @@
 <p>now use the search bar below to enter the book you wanna know about and it will taek you to the indigo website with the book loaded up.</p>
 
 <!-- Textfield with Floating Label -->
-
+<main class="mdl-layout__content">
+  
 <div class="text">
-<form action="#">
-  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    <input id="userInput" class="mdl-textfield__input" type="text" id="sample3">
-    <label class="mdl-textfield__label" for="sample3">indigo.</label>
-  </div>
-</form>
+  <!-- Simple Textfield -->
+  <form action="#">
+    <div class="mdl-textfield mdl-js-textfield">
+      <input id="userInput" class="mdl-textfield__input" type="text" id="sample1">
+      <label class="mdl-textfield__label" for="sample1">indigo</label>
+    </div>
+  </form>
 </div>
 
 
@@ -85,7 +99,7 @@
     </button>
   </div>
 
-
+</main>
 
 
 </body>
