--- a/Unit1/Final/index2.html
+++ b/Unit1/Final/index2.html
@@ -13,6 +13,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+
 </head>
 
 
@@ -32,7 +36,7 @@
         <nav class="mdl-navigation mdl-layout--large-screen-only">
           <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html?serverWindowId=6da56954-b23b-4cab-abc2-8242f9838021">1</a>
           <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index2.html?serverWindowId=9dfe60db-183b-4a1d-ab49-7f3f4b1add8b">2</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html?serverWindowId=6da56954-b23b-4cab-abc2-8242f9838021">3</a>
+          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index3.html?serverWindowId=0d7036b9-7f83-498f-b0cf-e00f238fe0de">3</a>
           <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index4.html?serverWindowId=11c3d725-bc56-4724-abe8-85a3a5908698">4</a>
         </nav>
       </div>
@@ -60,30 +64,43 @@
   <p>These reasons are made to show you a whole new world</p>
 
 
-  <div class="move">
-  <div class="box">
-    <ol class="list">
-    <li>Books have some of the best stories</li>
-    <img src="">
-    <br>
-    <br>
-    <li>Books are the oen of the best wasy to improve your grammar</li>
-    <img src="">
-    <br>
-    <br>
-    <li>You can laern more about some of your favorite wordl like harry potter, percy jackon and lord of the rings.</li>
-    <img src="">
-    <br>
-    <br>
-    <li>You can join some of the most fun and creatice communites and meet great new people that have the same intrests.</li>
-    <img src="">
-    <br>
-    <br>
-    <li>The momments</li>
-    <img src="">
-    </ol>
+  
+  <div class="box1">
+<p>leo</p>
+
   </div>
+
+  <div class="box2">
+    <p>leo</p>
+  
   </div>
+
+
 </body>
 
 </html>
+
+    <!--    
+        <div class="move">
+        <ol class="list">
+        <li>Books have some of the best stories</li>
+        <img src="">
+        <br>
+        <br>
+        <li>Books are the oen of the best wasy to improve your grammar</li>
+        <img src="./images/words.jpg">
+        <br>
+        <br>
+        <li>You can laern more about some of your favorite wordl like harry potter, percy jackon and lord of the rings.</li>
+        <img src="">
+        <br>
+        <br>
+        <li>You can join some of the most fun and creatice communites and meet great new people that have the same intrests.</li>
+        <img src="">
+        <br>
+        <br>
+        <li>The momments</li>
+        <img src="">
+        </ol>
+      </div>
+    -->
