--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -13,6 +13,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+
 </head>
 
 
@@ -40,7 +44,7 @@
           <a class="mdl-navigation__link"
             href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index2.html?serverWindowId=9dfe60db-183b-4a1d-ab49-7f3f4b1add8b">2</a>
           <a class="mdl-navigation__link"
-            href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html?serverWindowId=6da56954-b23b-4cab-abc2-8242f9838021">3</a>
+            href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index3.html?serverWindowId=0d7036b9-7f83-498f-b0cf-e00f238fe0de">3</a>
           <a class="mdl-navigation__link"
             href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index4.html?serverWindowId=11c3d725-bc56-4724-abe8-85a3a5908698">4</a>
         </nav>
@@ -71,7 +75,7 @@
 
 <h3 class="mainheaders"> now it time for you to go check some of these books out.</h3>
 
-<p>now use the search bar below to enter the book you wanna know about and it will taek you to the indigo website with the book loaded up.</p>
+<p>now use the search bar below to enter the book you wanna know about and it will take you to the indigo website with the book loaded up.</p>
 
 <!-- Textfield with Floating Label -->
 <main class="mdl-layout__content">
@@ -85,8 +89,6 @@
     </div>
   </form>
 </div>
-
-
 
 
 
