--- a/Unit1/Final/index2.html
+++ b/Unit1/Final/index2.html
@@ -67,7 +67,7 @@
   
   <div class="box1">
   <h3>You can laern more about some of your favorite wordl like harry potter, percy jackon and lord of the rings.</h3>
-
+  <img src="./images/words.jpg">
   </div>
 
   <div class="box2">
@@ -76,7 +76,7 @@
   </div>
 
   <div class="box3">
-    <h3>Books are the oen of the best wasy to improve your grammar</h3>
+    <h3>Books are the one of the best wasy to improve your grammar</h3>
   
   </div>
 
