--- a/Unit1/Final/index3.html
+++ b/Unit1/Final/index3.html
@@ -64,30 +64,32 @@
 <h3 class="mainheaders"> Five begginer books that you should read.</h3>
 <p>These books were chos by me for you</p>
 
-<div class="move">
-  <div class="box">
-    <ol class="list">
-      <li>the way of kings</li>
-      <img src="">
-      <br>
-      <br>
-      <li>The will of the many</li>
-      <img src="">
-      <br>
-      <br>
-      <li> Mistborn</li>
-      <img src="">
-      <br>
-      <br>
-      <li>3 body problems</li>
-      <img src="">
-      <br>
-      <br>
-      <li>Tress of the emerald sea</li>
-      <img src="">
-    </ol>
-  </div>
+
+<div class="box1">
+  <h3>the way of kings</h3>
 </div>
+
+<div class="box2">
+  <h3>The will of the many</h3>
+
+</div>
+
+<div class="box3">
+  <h3>Mistborn</h3>
+
+</div>
+
+
+<div class="box4">
+  <h3>3 body problems</h3>
+
+</div>
+
+<div class="box5">
+  <h3>Tress of the emerald sea</h3>
+
+</div>
+
 
 </body>
 
