adde some more boxes and moved the button around a lilte

--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -103,10 +103,15 @@
 
 </main>
 
+
+  <h6 id="storeheading">This is a list of the best book stores</h6>
 <div class="boxstore">
  <ol>
-  <li>leo</li>
-  <li>we</li>
+  <li>Indigo/chapthers</li>
+  <li>Perfect Books</li>
+  <li>Barnes & Noble</li>
+  <li>Amazone</li>
+  <li>online stores(like kindle)</li>
  </ol>
 
 </div>
