fixed some grammar

--- a/Unit1/Final/index2.html
+++ b/Unit1/Final/index2.html
@@ -64,9 +64,8 @@
   <p>These reasons are made to show you a whole new world</p>
 
 
-  
   <div class="box1">
-  <h3>You can laern more about some of your favorite wordl like harry potter, percy jackon and lord of the rings.</h3>
+  <h3>You can learn more about some of your favorite worlds like harry potter, percy jackon and lord of the rings.</h3>
   <img src="./images/words.jpg">
   </div>
 
@@ -82,7 +81,7 @@
 
 
   <div class="box4">
-    <h3>The momments</h3>
+    <h3>The communities</h3>
   
   </div>
 
@@ -95,28 +94,3 @@
 </body>
 
 </html>
-
-    <!--    
-        <div class="move">
-        <ol class="list">
-        <li>Books have some of the best stories</li>
-        <img src="">
-        <br>
-        <br>
-        <li>Books are the oen of the best wasy to improve your grammar</li>
-        <img src="./images/words.jpg">
-        <br>
-        <br>
-        <li>You can laern more about some of your favorite wordl like harry potter, percy jackon and lord of the rings.</li>
-        <img src="">
-        <br>
-        <br>
-        <li>You can join some of the most fun and creatice communites and meet great new people that have the same intrests.</li>
-        <img src="">
-        <br>
-        <br>
-        <li>The momments</li>
-        <img src="">
-        </ol>
-      </div>
-    -->
