--- a/Unit1/Final/index3.html
+++ b/Unit1/Final/index3.html
@@ -61,8 +61,8 @@
   <br>
 
 
-<h3 class="mainheaders"> Five begginer books that you should read.</h3>
-<p>These books were chos by me for you</p>
+<h3 class="mainheaders"> Five begineer books that you should read.</h3>
+<p>These books were chosen by me for you</p>
 
 
 <div class="box1">
