--- a/Unit1/Final/index2.html
+++ b/Unit1/Final/index2.html
@@ -66,28 +66,40 @@
 
   <div class="box1">
   <h3>You can learn more about some of your favorite worlds like harry potter, percy jackon and lord of the rings.</h3>
-  <img src="./images/words.jpg">
+  <div id="set1">
+    <img src="./images/harry potter.jpg">
+    <img src="./images/percy jackson.jpg">
+    <img src="./images/lord of the rings.jpg">
+  </div>
   </div>
 
   <div class="box2">
     <h3>Books have some of the best stories</h3>
-  
-  </div>
+    <div id="set2">
+      <img src="./images/stories.jpg">
+    </div>
+    </div>
 
   <div class="box3">
     <h3>Books are the one of the best wasy to improve your grammar</h3>
-  
+    <div id="set4">
+      <img src="./images/words.jpg">
+    </div>
   </div>
 
 
   <div class="box4">
     <h3>The communities</h3>
-  
+    <div id="set3">
+      <img src="./images/book club.jpg">
+    </div>
   </div>
 
   <div class="box5">
     <h3>The momments</h3>
-  
+    <div id="set5">
+      <img src="./images/cool.jpg">
+    </div>
   </div>
 
 
