--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -77,8 +77,9 @@
 
 <p>now use the search bar below to enter the book you wanna know about and it will take you to the indigo website with the book loaded up.</p>
 
-<!-- Textfield with Floating Label -->
+
 <main class="mdl-layout__content">
+<!-- Textfield with Floating Label -->
 
 <div class="text">
   <!-- Simple Textfield -->
@@ -86,7 +87,9 @@
     <div class="mdl-textfield mdl-js-textfield">
       <input id="userInput" class="mdl-textfield__input" type="text" id="sample1">
       <label class="mdl-textfield__label" for="sample1">indigo</label>
-    </div>
+
+
+  </div>
       <div class="button">
         <!-- Colored FAB button with ripple -->
         <button id="searchButton" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
@@ -117,6 +120,11 @@
 
 </div>
 
+
+<div id="indigo">
+  <img src="./images/indigo.jpg" alt="indigo">
+
+</div >
 
 
 <script src="./js/script.js"></script>
