added random book generator wich is juist a reworked version of your coolness generator

--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -110,9 +110,9 @@
 
 </div>
 
-
-
 </main>
+
+
 
 
   <h6 id="storeheading">This is a list of the best book stores</h6>
@@ -130,8 +130,22 @@
 
 <div id="indigo">
   <img src="./images/indigo.jpg" alt="indigo">
-
 </div >
+<div id="bookgen">
+<main class="mdl-layout__content">
+<div class="coll">
+  <h5>if you are'nt sure what book to read</h5>
+  <p id="generatedName"></p>
+  <button onclick="generateRandomName()">click here</button>
+
+
+</div>
+</main>
+
+
+
+
+
 
 
 <script src="./js/script.js"></script>
