--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -73,9 +73,9 @@
 <br>
 
 
-<h3 class="mainheaders"> now it time for you to go check some of these books out.</h3>
+<h3 class="mainheaders"> Now it's' time for you to go check some of these books out.</h3>
 
-<p>now use the search bar below to enter the book you wanna know about and it will take you to the indigo website with the book loaded up.</p>
+<p>Now use the search bar below to enter the book you wanna know about and it will take you to the indigo website with the book loaded up.</p>
 
 
 <main class="mdl-layout__content">
