--- a/Unit1/Final/index3.html
+++ b/Unit1/Final/index3.html
@@ -34,10 +34,10 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index.html?serverWindowId=6da56954-b23b-4cab-abc2-8242f9838021">1</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index2.html?serverWindowId=9dfe60db-183b-4a1d-ab49-7f3f4b1add8b">2</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index3.html?serverWindowId=0d7036b9-7f83-498f-b0cf-e00f238fe0de">3</a>
-          <a class="mdl-navigation__link" href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index4.html?serverWindowId=11c3d725-bc56-4724-abe8-85a3a5908698">4</a>
+          <a class="mdl-navigation__link" href="./index.html">1</a>
+          <a class="mdl-navigation__link" href="./index2.html">2</a>
+          <a class="mdl-navigation__link" href="./index3.html">3</a>
+          <a class="mdl-navigation__link" href="./index4.html">4</a>
          </nav>
          </div>
     </header>
