--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -46,7 +46,7 @@
           <a class="mdl-navigation__link"
             href="./index3.html">3</a>
           <a class="mdl-navigation__link"
-            href="https://urban-journey-974g6v7px6gvfprg5-3000.app.github.dev/Unit1/Final/index4.html?serverWindowId=11c3d725-bc56-4724-abe8-85a3a5908698">4</a>
+            href="./index4.html">4</a>
         </nav>
       </div>
     </header>
