--- a/Unit1/Final/index3.html
+++ b/Unit1/Final/index3.html
@@ -44,11 +44,11 @@
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">list of books</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="">Way of Kings</a>
-          <a class="mdl-navigation__link" href="">The will of the many</a>
-          <a class="mdl-navigation__link" href="">Mistborn</a>
-          <a class="mdl-navigation__link" href="">3 body problems</a>
-          <a class="mdl-navigation__link" href="">tress if the emerald sea</a>
+          <a class="mdl-navigation__link" href="https://archer-kim.github.io/ICD2O/Unit1/Final/index.html">Greece</a>
+          <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Canada">Canada</a>
+          <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Brazil">Brazil</a>
+          <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Poland">Poland</a>
+          <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/France">France</a>
         </nav>
       </div>
       <main class="mdl-layout__content">
