--- a/Unit1/Final/index2.html
+++ b/Unit1/Final/index2.html
@@ -42,7 +42,7 @@
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">list of books</span>
+        <span class="mdl-layout-title">list of the best places to read </span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="https://archer-kim.github.io/ICD2O/Unit1/Final/index.html">Greece</a>
           <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Canada">Canada</a>
@@ -60,12 +60,12 @@
     <br>
 
 
-    <h3 class="mainheaders"> Five reasson why you should give books a try</h3>
+    <h3 class="mainheaders"> Five reasons why you should give books a try</h3>
     <p>These reasons are made to show you a whole new world</p>
 
 
     <div class="box1">
-      <h3>You can learn more about some of your favorite worlds like harry potter, percy jackon and lord of the rings.</h3>
+      <h3>You can learn more about some of your favorite worlds like Harry Potter, Percy Jackon and Lord Of The Rings.</h3>
       <div id="set1">
         <img src="./images/harry potter.jpg">
         <img src="./images/percy jackson.jpg">
