--- a/Unit1/Final/index3.html
+++ b/Unit1/Final/index3.html
@@ -42,7 +42,7 @@
            </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">list of books</span>
+        <span class="mdl-layout-title"></span>list of the best places to read</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="https://archer-kim.github.io/ICD2O/Unit1/Final/index.html">Greece</a>
           <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Canada">Canada</a>
@@ -61,19 +61,19 @@
     <br>
 
 
-    <h3 class="mainheaders"> Five begineer books that you should read.</h3>
+    <h3 class="mainheaders"> Five beginner books that you should read.</h3>
     <p>These books were chosen by me for you</p>
 
 
     <div class="box1">
-      <h3>the way of kings</h3>
+      <h3>The Way Of Kings</h3>
         <div class="coolphotos">
           <img src="./images/the way of kings.jpg">
         </div>
     </div>
 
     <div class="box2">
-      <h3>The will of the many</h3>
+      <h3>The Will Of The Many</h3>
         <div class="coolphotos">
           <img src="./images/the will of the many.jpg">
         </div>
@@ -88,14 +88,14 @@
 
 
     <div class="box4">
-      <h3>3 body problems</h3>
+      <h3>3 Body Problems</h3>
         <div id="bodyproblem">
           <img width="350" height="200" src="./images/3 body problem.jpg">
         </div>
     </div>
 
     <div class="box5">
-      <h3>Tress of the emerald sea</h3>
+      <h3>Tress Of The Emerald Sea</h3>
         <div class="coolphotos">
           <img src="./images/tress.jpg">
         </div>
