--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -73,7 +73,7 @@
     <br>
 
 
-    <h3 class="mainheaders"> Now it's' time for you to go check some of these books out.</h3>
+    <h3 class="mainheaders"> Now it's time for you to go check some of these books out.</h3>
 
     <p>Now use the search bar below to enter the book you wanna know about and it will take you to the indigo website with the book loaded up.</p>
 
@@ -134,7 +134,7 @@
     <div id="bookgen">
       <main class="mdl-layout__content">
         <div class="coll">
-        <h5>if you are'nt sure what book to read</h5>
+        <h5>if you are not sure what book to read</h5>
         <p id="generatedName"></p>
         <button onclick="generateRandomName()">click here</button>
       </div>
