--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -9,7 +9,7 @@
     <meta name="description" content="why books rock">
     <meta name="author" content="Leo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> 4</title>
+    <title>Go get some books!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
 
