--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -128,9 +128,7 @@
     </div>
 
 
-    <div id="indigo">
-      <img src="./images/indigo.jpg" alt="indigo">
-   </div>
+
     <div id="bookgen">
       <main class="mdl-layout__content">
         <div class="coll">
@@ -142,10 +140,44 @@
     </main>
 
 
+<!-- Square card 
+
+  <div id="indigo">
+      <div class="demo-card-square mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand">
+          <h2 class="mdl-card__title-text"></h2>
+        </div>
+         <div class="mdl-card__supporting-text">
+This will take you to the indigo home page.
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"> </a>
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">GO GET BOOKS</a>
+
+        </div>
+      </div>
+    </div>
+  -->
 
 
 
+    <div id="indigo">
+      <div class="demo-card-square mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand">
+          <h2 class="mdl-card__title-text"></h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+          This will take you to the indigo home page.
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+<a href="https://www.indigo.ca/en-ca/" target="_blank"
+  class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+  GO GET BOOKS
+</a>
 
+        </div>
+      </div>
+    </div>
 
     <script src="./js/script.js"></script>
 
