--- a/Unit1/Final/index.html
+++ b/Unit1/Final/index.html
@@ -21,39 +21,25 @@
 
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="./js/script.js"></script>
-  
-    <!-- Always shows a header, even in smaller screens. -->
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <!-- Title -->
-          <span class="mdl-layout-title">Books are for you</span>
-          <!-- Add spacer, to align navigation to the right -->
-          <div class="mdl-layout-spacer"></div>
-          <!-- Navigation. We hide it in small screens. -->
-          <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="./index.html">1</a>
-          <a class="mdl-navigation__link" href="./index2.html">2</a>
-          <a class="mdl-navigation__link" href="./index3.html">3</a>
-          <a class="mdl-navigation__link" href="./index4.html">4</a>
-         </nav>
-        </div>   
-      </header>
-      <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">list of the best places to read</span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="https://archer-kim.github.io/ICD2O/Unit1/Final/index.html">Greece</a>
-          <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Canada">Canada</a>
-          <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Brazil">Brazil</a>
-          <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Poland">Poland</a>
-          <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/France">France</a>
-        </nav>
-      </div>
-      <main class="mdl-layout__content">
-        <div class="page-content"><!-- books --></div>
-      </main>
+
+<div>
+
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <!-- Title -->
+      <span class="mdl-layout-title">Books are for you</span>
+      <!-- Add spacer, to align navigation to the right -->
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation. We hide it in small screens. -->
+      <nav class="mdl-navigation mdl-layout--large-screen-only">
+        <a class="mdl-navigation__link" href="./index.html">1</a>
+        <a class="mdl-navigation__link" href="./index2.html">2</a>
+        <a class="mdl-navigation__link" href="./index3.html">3</a>
+        <a class="mdl-navigation__link" href="./index4.html">4</a>
+      </nav>
     </div>
+  </header>
+</div>
 
   <br>
   <br>
@@ -67,7 +53,7 @@
   <img src="images/guy reading book for project.jpg" id="photo1">
 
 
-
+    <script src="./js/script.js"></script>
   </body>
 
 </html>
