--- a/Unit1/Final/test.html
+++ b/Unit1/Final/test.html
@@ -29,23 +29,25 @@
 
 
   <div>
-  
-    <header class="mdl-layout__header">
-      <div class="mdl-layout__header-row">
-        <!-- Title -->
-        <span class="mdl-layout-title">Books are for you</span>
-        <!-- Add spacer, to align navigation to the right -->
-        <div class="mdl-layout-spacer"></div>
-        <!-- Navigation. We hide it in small screens. -->
-        <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="./index.html">1</a>
-          <a class="mdl-navigation__link" href="./index2.html">2</a>
-          <a class="mdl-navigation__link" href="./index3.html">3</a>
-          <a class="mdl-navigation__link" href="./index4.html">4</a>
-        </nav>
-      </div>
-    </header>
-  </div>
+
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">Books are for you</span>
+          <!-- Add spacer, to align navigation to the right -->
+          <div class="mdl-layout-spacer"></div>
+          <!-- Navigation. We hide it in small screens. -->
+          <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <a class="mdl-navigation__link" href="./index.html">1</a>
+            <a class="mdl-navigation__link" href="./index2.html">2</a>
+            <a class="mdl-navigation__link" href="./index3.html">3</a>
+            <a class="mdl-navigation__link" href="./index4.html">4</a>
+          </nav>
+        </div>
+      </header>
+    </div>
+
+
 
 
   <br>
@@ -93,57 +95,59 @@
 
     </div>
 
-    </main>
+  </main>
 
 
 
 
-    <h6 id="storeheading">This is a list of the best book stores</h6>
-    <div class="boxstore">
-      <ol>
-        <li>Indigo/chapthers</li>
-        <li>Perfect Books</li>
-        <li>Barnes & Noble</li>
-        <li>Amazone</li>
-        <li>online stores(like kindle)</li>
-      </ol>
+  <h6 id="storeheading">This is a list of the best book stores</h6>
+  <div class="boxstore">
+    <ol>
+      <li>Indigo/chapthers</li>
+      <li>Perfect Books</li>
+      <li>Barnes & Noble</li>
+      <li>Amazone</li>
+      <li>online stores(like kindle)</li>
+    </ol>
 
-    </div>
-
-
-
-    <div id="bookgen">
-      <main class="mdl-layout__content">
-        <div class="coll">
-          <h5>if you are not sure what book to read</h5>
-          <p id="generatedName"></p>
-          <button onclick="generateRandomName()">click here</button>
-        </div>
-    </div>
-    </main>
+  </div>
 
 
 
-<!-- Square card   -->
-<div id="indigo">
-  <div class="demo-card-square mdl-card mdl-shadow--2dp">
-    <div class="mdl-card__title mdl-card--expand">
-      <h2 class="mdl-card__title-text">Update</h2>
-    </div>
-    <div class="mdl-card__supporting-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Aenan convallis.
-    </div>
-    <div class="mdl-card__actions mdl-card--border">
-      <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
-        href="https://en.wikipedia.org/wiki/France">
-        View Updates
-      </a>
+  <div id="bookgen">
+    <main class="mdl-layout__content">
+      <div class="coll">
+        <h5>if you are not sure what book to read</h5>
+        <p id="generatedName"></p>
+        <button onclick="generateRandomName()">click here</button>
+      </div>
+  </div>
+
+
+
+
+  <!-- Square card   -->
+  <div id="indigo">
+    <div class="demo-card-square mdl-card mdl-shadow--2dp">
+      <div class="mdl-card__title mdl-card--expand">
+        <h2 class="mdl-card__title-text"></h2>
+      </div>
+      <div class="mdl-card__supporting-text">
+        This will take you to the Indigo homepage.
+      </div>
+      <div class="mdl-card__actions mdl-card--border">
+        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
+          href="https://www.indigo.ca/en-ca/">
+          GO GET BOOKS
+        </a>
+      </div>
     </div>
   </div>
-</div>
 
 
+
+
+  </main>
   <script src="./js/script.js"></script>
 
 </body>
