--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -42,6 +42,7 @@
           <a class="mdl-navigation__link" href="./index2.html">2</a>
           <a class="mdl-navigation__link" href="./index3.html">3</a>
           <a class="mdl-navigation__link" href="./index4.html">4</a>
+          <a class="mdl-navigation__link" href="./index5.html">5</a>
         </nav>
       </div>
     </header>
@@ -128,16 +129,15 @@
 <div id="indigo">
   <div class="demo-card-square mdl-card mdl-shadow--2dp">
     <div class="mdl-card__title mdl-card--expand">
-      <h2 class="mdl-card__title-text">Update</h2>
+      <h2 class="mdl-card__title-text"></h2>
     </div>
     <div class="mdl-card__supporting-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Aenan convallis.
+     This will take you tp the indigo homepage.
     </div>
     <div class="mdl-card__actions mdl-card--border">
       <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
-        href="https://en.wikipedia.org/wiki/France">
-        View Updates
+        href="https://www.indigo.ca/en-ca/">
+        GO GET BOOKS
       </a>
     </div>
   </div>
